Add Guardfile and its dependencies

--- a/cookbooks/web_application/Gemfile
+++ b/cookbooks/web_application/Gemfile
@@ -2,11 +2,13 @@ source 'https://rubygems.org/'
 
 gem 'berkshelf'
 
-group :unit do
-  gem 'rubocop',          '~> 0.24', '>= 0.24.0'
-  gem 'chefspec',         '~> 4.0'
-  gem 'guard',            '~> 2.6'
-  gem 'guard-rubocop',    '~> 1.0'
-  gem 'guard-rspec',      '~> 4.3'
-  gem 'guard-chef'
+group :development do
+  gem 'test-kitchen'
+  gem 'kitchen-vagrant'
+  gem 'guard'
+  gem 'guard-kitchen'
+  gem 'guard-rubocop'
+  gem 'guard-rspec'
+  gem 'foodcritic'
+  gem 'chefspec'
 end
